# Jelly

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
cmake/: BuildOptions.cmake
common/: CMakeLists.txt
common/include/: error_code.h
common/timer/: timer.cpp
common/utils/: date_time.h  double_link.h
jelly/: CMakeLists.txt
jelly/common/timer/: timer.h
jelly/net/detail/: socket_ops.h
net/: CMakeLists.txt
net/include/detail/: socket_ops.h  socket_type.h
test/: CMakeLists.txt  test_double_link.cpp  test_timer.cpp
